syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

message HubEventProto {
  string hub_id = 1; // Hub identifier
  google.protobuf.Timestamp timestamp = 2; // Event timestamp
  oneof  payload { // Specific event content
    DeviceAddedEventProto device_added = 3; // Data for device addition event
    DeviceRemovedEventProto device_removed = 4; // Data for device removal event
    ScenarioAddedEventProto scenario_added = 5; // Data for adding a new scenario
    ScenarioRemovedEventProto scenario_removed = 6; //Data for removing the scenario
  }
}

// Events for (de)registering devices

enum DeviceTypeProto {
  MOTION_SENSOR = 0;
  TEMPERATURE_SENSOR = 1;
  LIGHT_SENSOR = 2;
  CLIMATE_SENSOR = 3;
  SWITCH_SENSOR = 4;
}

message DeviceAddedEventProto {
  string id = 1;
  DeviceTypeProto type = 2;
}

message DeviceRemovedEventProto {
  string id = 1;
}

// Events for creating/deleting scenarios

enum ConditionTypeProto {
  MOTION = 0;
  LUMINOSITY = 1;
  SWITCH = 2;
  TEMPERATURE = 3;
  CO2LEVEL = 4;
  HUMIDITY = 5;
}

enum ConditionOperationProto {
  EQUALS = 0;
  GREATER_THAN = 1;
  LOWER_THAN = 2;
}

enum ActionTypeProto {
  ACTIVATE = 0;
  DEACTIVATE = 1;
  INVERSE = 2;
  SET_VALUE = 3;
}

message ScenarioConditionProto {
  string sensor_id = 1;
  ConditionTypeProto type = 2;
  ConditionOperationProto operation = 3;
  oneof value {
    bool bool_value = 4;
    int32 int_value = 5;
  }
}

message DeviceActionProto {
  string sensor_id = 1;
  ActionTypeProto type = 2;
  optional int32 value = 3;
}

message DeviceActionRequest {
  string hub_id = 1;
  string scenario_name = 2;
  DeviceActionProto action = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message ScenarioAddedEventProto {
  string name = 1; // Scenario name, unique within the hub
  repeated ScenarioConditionProto condition = 2; // Set of activation conditions
  repeated DeviceActionProto action = 3; // Set of actions upon activation
}

message ScenarioRemovedEventProto {
string name = 1;  // Scenario name, unique within the hub
  }