syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";


message SensorEventProto {
  string id = 1; // Sensor identifier
  google.protobuf.Timestamp timestamp = 2; // Event timestamp
  string hubId = 3; // Associated hub identifier
  oneof payload { // Event data from a specific device
    MotionSensorProto motion_sensor_event = 4; // Data from a motion sensor event
    TemperatureSensorProto temperature_sensor_event = 5; // Data from a temperature sensor event
    LightSensorProto light_sensor_event = 6; // Data from a light sensor event
    ClimateSensorProto climate_sensor_event = 7; // Data from a climate sensor event
    SwitchSensorProto switch_sensor_event = 8; // Data from a switch sensor event
    }
}

message MotionSensorProto {
  int32 link_quality = 1; // Signal quality; higher value indicates better quality
  bool motion = 2;        // Indicates the presence of motion or someoneâ€™s presence
  int32 voltage = 3;      // Voltage value, useful for assessing the current voltage in the sensor or related device
}


message TemperatureSensorProto {
  int32 temperature_c = 1; // Temperature level in Celsius
  int32 temperature_f = 2; // Temperature level in Fahrenheit
}

message LightSensorProto {
  int32 link_quality = 1; // Signal quality
  int32 luminosity = 2;   // Luminosity level
}

message ClimateSensorProto {
  int32 temperature_c = 1;  // Temperature level in Celsius
  int32 humidity = 3;       // Humidity level
  int32 co2_level = 5;      // CO2 level
}

message SwitchSensorProto {
  bool state = 1; // Switch state: on/off
}


